doc:fake password

--- a/docs/guide/v2.2.0新版本特性.md
+++ b/docs/guide/v2.2.0新版本特性.md
@@ -12,7 +12,7 @@
 
 需要注意的是，存放`default`用户的密码的字段，沿用了之前的`user`和`password`字段。因此，使用新版的`ckman`部署集群时，`user`字段自动填充的是`default`，`password`字段则是`default`用户的密码，在后续的`ckman`连接`clickhouse-server`的过程中，将使用`default`用户进行连接操作。
 
-![image-20211101095551270](img/image-20211101095551270.png)
+![image-20211101150155515](img/image-20211101150155515.png)
 
 如果使用的是旧的配置文件，则该字段仍然保存的是普通用户，不影响连接使用。不过为了统一，可以手动将普通用户迁移到`Userconf`的配置中去，此处只保留`default`用户的配置。
 
@@ -153,7 +153,7 @@
       "path": "/data01/",
       "sshUser": "root",
       "authenticateType": 0,
-      "sshPassword": "9E0D1254D6C31AAFEEF413197471BC16",
+      "sshPassword": "E310E892E56801CED9ED98AA177F18E6",
       "sshPort": 22,
       "Storage": null,
       "MergeTreeConf": null,
@@ -217,7 +217,7 @@ clusters:
         path: /data01/
         sshuser: root
         authenticatetype: 0
-        sshpassword: 9E0D1254D6C31AAFEEF413197471BC16
+        sshpassword: E310E892E56801CED9ED98AA177F18E6
         sshport: 22
         storage: null
         mergetreeconf: null
@@ -266,7 +266,7 @@ clusters:
         path: /data01/
         sshuser: root
         authenticatetype: 0
-        sshpassword: 9E0D1254D6C31AAFEEF413197471BC16
+        sshpassword: E310E892E56801CED9ED98AA177F18E6
         sshport: 22
         storage: null
         mergetreeconf: null
@@ -317,7 +317,7 @@ mysql存储策略需要在配置文件中配置mysql相关的配置：
 
 使用该工具，支持各个不同持久化策略之间的迁移，如从`local`的 `json`迁移 到`MySQL`，从`MySQL`迁移到 `local`，`local`的`JSON`格式和 `yaml`格式之间也可相互迁移。
 
-该迁移工具使用之前，需要配置migrate.yaml配置文件，默认使用/etc/ckman/conf/migrate.yaml。配置选项如下：
+该迁移工具使用之前，需要配置`migrate.yaml`配置文件，默认使用`/etc/ckman/conf/migrate.yaml`。配置选项如下：
 
 ```yaml
 source: local1	#数据源，从什么地方迁移
